--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -4,34 +4,34 @@
             <li class="active">
                 <span class="tag">For Sale</span>
                 <a class="slide-onMobile-opener">
-                    <strong class="active"><span class="icon-flash-activation"></span> active <span class="numbering">999+</span></strong>
+                    <strong class="active">active <span class="numbering">999+</span></strong>
                 </a>
             </li>
         </ul>
         <ul class="slide-onMobile">
             <li class="active-nav">
                 <a href="#">
-                    <strong class="active"><span class="icon-flash-activation"></span> active <span class="numbering">999+</span></strong>
+                    <strong class="active">active <span class="numbering">999+</span></strong>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <strong class="pendings"><span class="icon-clock"></span> pendings <span class="numbering">88</span></strong>
+                    <strong class="pending">pendings <span class="numbering">88</span></strong>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <strong class="rejected"><span class="icon-sign"></span> rejected <span class="numbering">2</span></strong>
+                    <strong class="rejected">rejected <span class="numbering">2</span></strong>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <strong class="expired"><span class="icon-exclamation-triangle"></span> expired <span class="numbering">99</span></strong>
+                    <strong class="expired">expired <span class="numbering">99</span></strong>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <strong class="deleted"><span class="icon-trash"></span> deleted <span class="numbering">34</span></strong>
+                    <strong class="deleted">deleted <span class="numbering">34</span></strong>
                 </a>
             </li>
         </ul>
@@ -120,7 +120,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -156,7 +156,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -192,7 +192,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -228,7 +228,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -264,7 +264,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -300,7 +300,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -336,7 +336,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -372,7 +372,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -408,7 +408,7 @@
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
