--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -403,8 +403,8 @@ th {
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?gynrji");
-  src: url("../fonts/icomoon.eot?gynrji#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?gynrji") format("truetype"), url("../fonts/icomoon.woff?gynrji") format("woff"), url("../fonts/icomoon.svg?gynrji#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?lr79q7");
+  src: url("../fonts/icomoon.eot?lr79q7#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?lr79q7") format("truetype"), url("../fonts/icomoon.woff?lr79q7") format("woff"), url("../fonts/icomoon.svg?lr79q7#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -421,6 +421,10 @@ th {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-logout:before {
+  content: "\e92f";
 }
 
 .icon-home-button:before {
@@ -491,32 +495,12 @@ th {
   content: "\e91a";
 }
 
-.icon-trash:before {
-  content: "\e910";
+.icon-chevron-thin-right:before {
+  content: "\e92d";
 }
 
-.icon-file-zip:before {
-  content: "\e916";
-}
-
-.icon-contact_phone:before {
-  content: "\e905";
-}
-
-.icon-clock:before {
-  content: "\e90d";
-}
-
-.icon-cross:before {
-  content: "\e906";
-}
-
-.icon-directions:before {
-  content: "\e914";
-}
-
-.icon-phone_iphone:before {
-  content: "\e913";
+.icon-chevron-thin-left:before {
+  content: "\e92e";
 }
 
 .icon-plus:before {
@@ -525,6 +509,34 @@ th {
 
 .icon-login:before {
   content: "\e918";
+}
+
+.icon-user-plus:before {
+  content: "\e973";
+}
+
+.icon-circle-up:before {
+  content: "\ea41";
+}
+
+.icon-circle-right:before {
+  content: "\ea42";
+}
+
+.icon-circle-down:before {
+  content: "\ea43";
+}
+
+.icon-circle-left:before {
+  content: "\ea44";
+}
+
+.icon-home:before {
+  content: "\e928";
+}
+
+.icon-society:before {
+  content: "\e929";
 }
 
 .icon-search:before {
@@ -563,6 +575,34 @@ th {
   content: "\e907";
 }
 
+.icon-trash:before {
+  content: "\e910";
+}
+
+.icon-file-zip:before {
+  content: "\e916";
+}
+
+.icon-contact_phone:before {
+  content: "\e905";
+}
+
+.icon-clock:before {
+  content: "\e90d";
+}
+
+.icon-cross:before {
+  content: "\e906";
+}
+
+.icon-directions:before {
+  content: "\e914";
+}
+
+.icon-phone_iphone:before {
+  content: "\e913";
+}
+
 .icon-exclamation-triangle:before {
   content: "\e912";
 }
@@ -577,6 +617,18 @@ th {
 
 .icon-user2:before {
   content: "\e90a";
+}
+
+.icon-angle-down:before {
+  content: "\e92c";
+}
+
+.icon-bed:before {
+  content: "\e92a";
+}
+
+.icon-bank:before {
+  content: "\e92b";
 }
 
 .icon-phone:before {
@@ -1243,6 +1295,29 @@ a {
   font-size: 18px;
   line-height: 19px;
   font-weight: bold;
+}
+
+.logout {
+  float: right;
+  color: #fff;
+  text-decoration: none;
+  margin: 15px 40px 0 30px;
+}
+
+@media (max-width: 767px) {
+  .logout {
+    margin: 15px 25px 0 10px;
+  }
+}
+
+.logout span[class*="icon-"], .logout span[class*="icon-"] {
+  display: inline-block;
+  vertical-align: middle;
+  margin: -2px 0 0;
+}
+
+.logout:hover {
+  opacity: 0.8;
 }
 
 /*mian content of the page*/
