--- a/markup/scss/property-listing.scss
+++ b/markup/scss/property-listing.scss
@@ -118,6 +118,7 @@ $media-expressions: (
 			&.slide-onMobile{
 				@include media('<desktop'){
 					display: none;
+					
 					li{
 						display: block;
 						@include font(14,17);
@@ -135,21 +136,49 @@ $media-expressions: (
 				strong{
 					@include align(top);
 					font-weight: 600;
+					position: relative;
+					
+					&:before{
+						font-family: 'icomoon';
+						@include align(top);
+						padding: 0 4px;
+						font-weight: 400;
+					}
 					
 					&.active{
 						color: $green;
+						
+						&:before{
+							content: "\e91d";
+						}
 					}
-					&.pendings{
+					&.pending{
 							color: $mix-blue;
+							
+							&:before{
+								content: "\e90d";
+							}
 					}
 					&.rejected{
 							color:#bc5858;
+							
+							&:before{
+								content: "\e920";
+							}
 					}
 					&.expired{
 							color: #cf8511;
+							
+							&:before{
+								content: "\e912";
+							}
 					}
 					&.deleted{
 							color: $red;
+							
+							&:before{
+							content: "\e910";
+						}
 					}
 				}
 				
@@ -165,7 +194,7 @@ $media-expressions: (
 					}
 					
 					@include media('<widescreen'){
-						padding: 15px;
+						padding: 15px 14px;
 					}
 					
 					&:hover{
