--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -92,7 +92,7 @@
             </form>
         </div>
         <div class="table-responsive">
-            <ul class="propeties-table accordion">
+            <ul class="properties-table accordion">
                 <li>
                     <div class="t-head by-id">
                         <input type="checkbox" id="ID">
@@ -431,5 +431,19 @@
                 </li>
             </ul>
         </div>
+        <ul class="pager">
+            <li><a href="#" class="previous"><span class="icon-chevron-thin-left"></span></a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#">6</a></li>
+            <li><a href="#">7</a></li>
+            <li><a href="#">8</a></li>
+            <li><a href="#">9</a></li>
+            <li><a href="#">10</a></li>
+            <li><a href="#" class="next"><span class="icon-chevron-thin-right"></span></a></li>
+        </ul>
     </div>
 </div>
