--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -639,7 +639,7 @@ th {
   content: "\e911";
 }
 
-#sidebar-dashboard .notifications-links, #sidebar-dashboard .sideBar-links, #sidebar-dashboard .sideBar-links li .sub-links, .social-networks, #footer .cols-holder ul {
+#sidebar-dashboard .notifications-links, #sidebar-dashboard .sideBar-links, #sidebar-dashboard .sideBar-links li .sub-links, .social-networks, .pager, #footer .cols-holder ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -905,7 +905,7 @@ input[type='submit'] {
   text-transform: uppercase !important;
 }
 
-.text-center, #header .searhForm-holder, #sidebar-dashboard .user-picture {
+.text-center, #header .searhForm-holder, #sidebar-dashboard .user-picture, .pager {
   text-align: center !important;
 }
 
@@ -1069,6 +1069,13 @@ a {
   width: 250px;
   float: right;
   margin: 0 30px 0 0;
+}
+
+@media (max-width: 1023px) {
+  #header .searhForm-holder {
+    margin: 0 20px 0 0;
+    width: 200px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1302,6 +1309,12 @@ a {
   color: #fff;
   text-decoration: none;
   margin: 15px 40px 0 30px;
+}
+
+@media (max-width: 1023px) {
+  .logout {
+    margin: 15px 10px 0 5px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1809,6 +1822,84 @@ a {
 .social-networks li a:hover.twitter {
   background: #55acee;
   border-color: #55acee;
+}
+
+.pager {
+  font-size: 0;
+  line-height: 0;
+  letter-spacing: -4px;
+  padding: 30px 0 0;
+}
+
+.pager > * {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0;
+}
+
+@media (max-width: 767px) {
+  .pager {
+    padding: 30px 0;
+    font-size: 0;
+    line-height: 0;
+    letter-spacing: -4px;
+  }
+  .pager > * {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0;
+  }
+}
+
+.pager li {
+  padding: 0 3px;
+  margin: 0 0 5px;
+}
+
+.pager li.active a {
+  color: #fff;
+  background: #133783;
+  border-color: #133783;
+}
+
+.pager li a {
+  display: block;
+  text-decoration: none;
+  color: #000;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  padding: 5px 10px;
+  transition: color 0.4s ease, background 0.4s ease;
+  -webkit-transition: color 0.4s ease, background 0.4s ease;
+  -moz-transition: color 0.4s ease, background 0.4s ease;
+  -ms-transition: color 0.4s ease, background 0.4s ease;
+}
+
+@media (max-width: 767px) {
+  .pager li a {
+    padding: 5px;
+  }
+}
+
+.pager li a.previous, .pager li a.next {
+  border: 0;
+  padding: 6px 0;
+  vertical-align: middle;
+}
+
+.pager li a.previous:hover, .pager li a.next:hover {
+  background: transparent;
+  color: #000;
+  opacity: 0.8;
+}
+
+.pager li a:hover {
+  color: #fff;
+  background: #133783;
+  border-color: #133783;
 }
 
 #footer {
