--- a/markup/css/property-listing.css
+++ b/markup/css/property-listing.css
@@ -1,4 +1,4 @@
-.property-listing-holder .listing-cetegories-links ul, .property-listing-holder .property-filter .by-user-sorting ul, .property-listing-holder .property-filter .by-id-sorting ul, .property-listing-holder .propeties-table {
+.property-listing-holder .listing-cetegories-links ul, .property-listing-holder .property-filter .by-user-sorting ul, .property-listing-holder .property-filter .by-id-sorting ul, .property-listing-holder .properties-table {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -439,44 +439,45 @@
   overflow-x: auto;
 }
 
-.property-listing-holder .propeties-table {
+.property-listing-holder .properties-table {
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
 }
 
-.sideBar-active .property-listing-holder .propeties-table {
+.sideBar-active .property-listing-holder .properties-table {
   margin: 0;
 }
 
 @media (max-width: 1199px) {
-  .property-listing-holder .propeties-table {
+  .property-listing-holder .properties-table {
     width: 1200px;
   }
 }
 
 @media (max-width: 1023px) {
-  .property-listing-holder .propeties-table {
+  .property-listing-holder .properties-table {
     font-size: 14px;
     line-height: 18px;
   }
 }
 
 @media (max-width: 1023px) {
-  .property-listing-holder .propeties-table {
+  .property-listing-holder .properties-table {
     width: 894px;
   }
 }
 
-.property-listing-holder .propeties-table li {
+.property-listing-holder .properties-table li {
   width: 100%;
   font-size: 0;
   line-height: 0;
   letter-spacing: -4px;
   border-bottom: 1px solid rgba(96, 96, 96, 0.4);
+  position: relative;
 }
 
-.property-listing-holder .propeties-table li > * {
+.property-listing-holder .properties-table li > * {
   display: inline-block;
   vertical-align: top;
   font-size: 15px;
@@ -485,12 +486,12 @@
 }
 
 @media (max-width: 1554px) {
-  .property-listing-holder .propeties-table li {
+  .property-listing-holder .properties-table li {
     font-size: 0;
     line-height: 0;
     letter-spacing: -4px;
   }
-  .property-listing-holder .propeties-table li > * {
+  .property-listing-holder .properties-table li > * {
     display: inline-block;
     vertical-align: top;
     font-size: 13px;
@@ -499,19 +500,36 @@
   }
 }
 
-.property-listing-holder .propeties-table li.active {
+.property-listing-holder .properties-table li.active {
   border-left: 1px solid rgba(96, 96, 96, 0.4);
   border-right: 1px solid rgba(96, 96, 96, 0.4);
   background: rgba(0, 0, 0, 0.03);
 }
 
-.property-listing-holder .propeties-table li:first-child {
+.property-listing-holder .properties-table li:first-child {
   border: 0;
   background: rgba(19, 55, 131, 0.5);
   border-radius: 4px;
 }
 
-.property-listing-holder .propeties-table li .t-head {
+.property-listing-holder .properties-table li.deleting:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 1px;
+  padding: 7px 0;
+  background: rgba(255, 255, 255, 0.9);
+  content: 'Deleting...';
+  color: #e14646;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  letter-spacing: 0;
+  display: block;
+}
+
+.property-listing-holder .properties-table li .t-head {
   text-align: left;
   padding: 8px;
   color: #fff;
@@ -519,42 +537,42 @@
   font-weight: 600;
 }
 
-.property-listing-holder .propeties-table li .t-head.by-location, .property-listing-holder .propeties-table li .t-head.by-type {
+.property-listing-holder .properties-table li .t-head.by-location, .property-listing-holder .properties-table li .t-head.by-type {
   width: 23.72%;
 }
 
-.property-listing-holder .propeties-table li .t-head.by-id {
+.property-listing-holder .properties-table li .t-head.by-id {
   width: 8%;
 }
 
-.property-listing-holder .propeties-table li .t-head.by-price {
+.property-listing-holder .properties-table li .t-head.by-price {
   width: 8%;
 }
 
-.property-listing-holder .propeties-table li .t-head.by-view {
+.property-listing-holder .properties-table li .t-head.by-view {
   width: 8%;
 }
 
 @media (max-width: 1554px) {
-  .property-listing-holder .propeties-table li .t-head {
+  .property-listing-holder .properties-table li .t-head {
     width: 14.28% !important;
   }
 }
 
 @media (max-width: 1023px) {
-  .property-listing-holder .propeties-table li .t-head {
+  .property-listing-holder .properties-table li .t-head {
     padding: 5px;
   }
 }
 
-.property-listing-holder .propeties-table li .t-head span {
+.property-listing-holder .properties-table li .t-head span {
   display: inline-block;
   vertical-align: top;
   cursor: pointer;
   position: relative;
 }
 
-.property-listing-holder .propeties-table li .t-head span:after {
+.property-listing-holder .properties-table li .t-head span:after {
   position: absolute;
   top: 8px;
   right: -15px;
@@ -562,58 +580,58 @@
   content: '';
 }
 
-.property-listing-holder .propeties-table li .t-head span.descending:after {
+.property-listing-holder .properties-table li .t-head span.descending:after {
   border-top: 5px solid #fff;
 }
 
-.property-listing-holder .propeties-table li .t-head span:hover {
+.property-listing-holder .properties-table li .t-head span:hover {
   color: #edf1f4;
 }
 
-.property-listing-holder .propeties-table li .t-head span:hover:after {
+.property-listing-holder .properties-table li .t-head span:hover:after {
   opacity: 0.8;
 }
 
-.property-listing-holder .propeties-table li .t-data {
+.property-listing-holder .properties-table li .t-data {
   text-align: left;
   padding: 10px 8px;
   overflow: hidden;
   width: 14.28%;
 }
 
-.property-listing-holder .propeties-table li .t-data.by-location, .property-listing-holder .propeties-table li .t-data.by-type {
+.property-listing-holder .properties-table li .t-data.by-location, .property-listing-holder .properties-table li .t-data.by-type {
   width: 23.72%;
 }
 
-.property-listing-holder .propeties-table li .t-data.by-id {
+.property-listing-holder .properties-table li .t-data.by-id {
   width: 8%;
 }
 
-.property-listing-holder .propeties-table li .t-data.by-price {
+.property-listing-holder .properties-table li .t-data.by-price {
   width: 8%;
 }
 
-.property-listing-holder .propeties-table li .t-data.by-view {
+.property-listing-holder .properties-table li .t-data.by-view {
   width: 8%;
 }
 
 @media (max-width: 1023px) {
-  .property-listing-holder .propeties-table li .t-data {
+  .property-listing-holder .properties-table li .t-data {
     padding: 5px;
   }
 }
 
 @media (max-width: 1554px) {
-  .property-listing-holder .propeties-table li .t-data {
+  .property-listing-holder .properties-table li .t-data {
     width: 14.28% !important;
   }
 }
 
-.property-listing-holder .propeties-table li p {
+.property-listing-holder .properties-table li p {
   margin: 0;
 }
 
-.property-listing-holder .propeties-table li a {
+.property-listing-holder .properties-table li a {
   display: inline-block;
   vertical-align: top;
   text-decoration: none;
@@ -624,40 +642,40 @@
   cursor: pointer;
 }
 
-.property-listing-holder .propeties-table li a.details {
+.property-listing-holder .properties-table li a.details {
   color: #489ddd;
   font-size: 20px;
   line-height: 1;
   font-weight: bold;
 }
 
-.property-listing-holder .propeties-table li a.details:hover {
+.property-listing-holder .properties-table li a.details:hover {
   color: #2277b7;
 }
 
-.property-listing-holder .propeties-table li a.edit {
+.property-listing-holder .properties-table li a.edit {
   color: #ef9521;
 }
 
-.property-listing-holder .propeties-table li a.edit:hover {
+.property-listing-holder .properties-table li a.edit:hover {
   color: #b66c0d;
 }
 
-.property-listing-holder .propeties-table li a.delete {
+.property-listing-holder .properties-table li a.delete {
   color: #e14646;
 }
 
-.property-listing-holder .propeties-table li a.delete:hover {
+.property-listing-holder .properties-table li a.delete:hover {
   color: #bc1e1e;
 }
 
-.property-listing-holder .propeties-table li .slide {
+.property-listing-holder .properties-table li .slide {
   display: block;
   overflow: hidden;
   padding: 0 0 10px;
 }
 
-.property-listing-holder .propeties-table li .slide .two-cols {
+.property-listing-holder .properties-table li .slide .two-cols {
   font-size: 0;
   line-height: 0;
   letter-spacing: -4px;
@@ -665,7 +683,7 @@
   color: #606060;
 }
 
-.property-listing-holder .propeties-table li .slide .two-cols > * {
+.property-listing-holder .properties-table li .slide .two-cols > * {
   display: inline-block;
   vertical-align: top;
   font-size: 14px;
@@ -673,11 +691,11 @@
   letter-spacing: 0;
 }
 
-.property-listing-holder .propeties-table li .slide .two-cols .col {
+.property-listing-holder .properties-table li .slide .two-cols .col {
   width: 50%;
 }
 
-.property-listing-holder .propeties-table li .slide .two-cols h1 {
+.property-listing-holder .properties-table li .slide .two-cols h1 {
   font-size: 22px;
   line-height: 25px;
   font-style: italic;
@@ -686,11 +704,11 @@
   font-weight: 600;
 }
 
-.property-listing-holder .propeties-table li .slide .two-cols p {
+.property-listing-holder .properties-table li .slide .two-cols p {
   margin: 0 0 10px;
 }
 
-.property-listing-holder .propeties-table li .slide .btn-more {
+.property-listing-holder .properties-table li .slide .btn-more {
   color: #fff;
   font-weight: 600;
   font-size: 16px;
@@ -709,7 +727,7 @@
   -ms-transition: border 0.4s ease, background 0.4s ease;
 }
 
-.property-listing-holder .propeties-table li .slide .btn-more:hover {
+.property-listing-holder .properties-table li .slide .btn-more:hover {
   background: #ef9521;
   border-bottom: 4px solid #b66c0d;
 }
