--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -195,6 +195,11 @@ a{ outline: none;}
 		float: right;
 		margin: 0 30px 0 0;
 		
+		@include media('<desktop'){
+			margin: 0 20px 0 0;
+			width: 200px;
+		}
+		
 		@include media('<tablet'){
 			margin: 17px 15px 0 0;
 			@extend .text-center;
@@ -348,6 +353,10 @@ a{ outline: none;}
 	color: $white;
 	text-decoration: none;
 	margin: 15px 40px 0 30px;
+	
+	@include media('<desktop'){
+		margin: 15px 10px 0 5px;
+	}
 	
 	@include media('<tablet'){
 		margin: 15px 25px 0 10px;
@@ -703,6 +712,64 @@ a{ outline: none;}
 					background: #55acee;
 					border-color: #55acee;
 				}
+			}
+		}
+	}
+}
+.pager {
+	@extend %listreset;
+	@extend .text-center;
+	@include align-reset(top,15,18);
+	padding: 30px 0 0;
+	
+	@include media('<tablet'){
+		padding: 30px 0;
+		@include align-reset(top,12,15);
+	}
+	
+	li {
+		padding: 0 3px;
+		margin: 0 0 5px;
+		
+		&.active {
+			a{
+				color: $white;
+				background: $defualt-blue;
+				border-color: $defualt-blue;
+			}
+		}
+		
+		a{
+			display: block;
+			text-decoration: none;
+			color: $black;
+			border: 1px solid rgba($black, 0.4);
+			padding: 5px 10px;
+			transition: color 0.4s ease, background 0.4s ease;
+			-webkit-transition: color 0.4s ease, background 0.4s ease;
+			-moz-transition: color 0.4s ease, background 0.4s ease;
+			-ms-transition: color 0.4s ease, background 0.4s ease;
+			
+			@include media('<tablet'){
+				padding: 5px;
+			}
+			
+			&.previous, &.next {
+				border: 0;
+				padding: 6px 0;
+				vertical-align: middle;
+				
+				&:hover{
+					background: transparent;
+					color: $black;
+					opacity: 0.8;
+				}
+			}
+			
+			&:hover{
+				color: $white;
+				background: $defualt-blue;
+				border-color: $defualt-blue;
 			}
 		}
 	}
