--- a/markup/scss/property-listing.scss
+++ b/markup/scss/property-listing.scss
@@ -343,7 +343,7 @@ $media-expressions: (
 	.table-responsive{
 		overflow-x: auto;
 	}
-	.propeties-table{
+	.properties-table{
 		width: 100%;
 		margin: 0 auto;
 		@extend %listreset;
@@ -368,6 +368,7 @@ $media-expressions: (
 			width: 100%;
 			@include align-reset(top,15,18);
 			border-bottom: 1px solid rgba($mix-grays, 0.4);
+			position: relative;
 			
 			@include media('<1555px'){
 				@include align-reset(top,13,16);
@@ -384,6 +385,24 @@ $media-expressions: (
 				background: rgba($defualt-blue, 0.5);
 				border-radius: 4px;
 			}
+			
+			&.deleting {
+               &:after{
+                   position: absolute;
+                   top: 0;
+                   left: 0;
+                   right: 0;
+                   bottom: 1px;
+                   padding: 7px 0;
+                   background:  rgba($white, 0.9);
+                   content: 'Deleting...';
+                   color: $red;
+                   @include font(18,25);
+                   text-align: center;
+				   letter-spacing: 0;
+				   display: block;
+               }
+           }
 			
 			.t-head{
 				text-align: left;
