add property form

--- a/markup/css/add-property-form.css
+++ b/markup/css/add-property-form.css
@@ -1110,12 +1110,6 @@
   }
 }
 
-.addPropertyFormContainer .image-uploading-area.error .error-text {
-  display: block;
-  padding: 3px;
-  text-align: left;
-}
-
 .addPropertyFormContainer .image-uploading-area li {
   width: 16.66%;
   position: relative;
@@ -1133,6 +1127,21 @@
   .addPropertyFormContainer .image-uploading-area li {
     width: 50%;
   }
+}
+
+.addPropertyFormContainer .image-uploading-area li.error .error-text {
+  display: block;
+  padding: 3px;
+  text-align: left;
+}
+
+.addPropertyFormContainer .image-uploading-area li.image-loaded .image-holder {
+  opacity: 1;
+  z-index: 9;
+}
+
+.addPropertyFormContainer .image-uploading-area li.image-loaded .picture-name {
+  pointer-events: inherit;
 }
 
 .addPropertyFormContainer .image-uploading-area li:first-child .file-uploader:before {
@@ -1180,10 +1189,6 @@
   color: #58a36f;
 }
 
-.addPropertyFormContainer .image-uploading-area li .file-uploader.after-none:after {
-  display: none !important;
-}
-
 .addPropertyFormContainer .image-uploading-area li .file-uploader:after {
   position: absolute;
   top: 50%;
@@ -1229,15 +1234,11 @@
   height: 50px;
   font-size: 14px;
   line-height: 18px;
+  pointer-events: none;
   transition: border 0.4s ease;
   -webkit-transition: border 0.4s ease;
   -ms-transition: border 0.4s ease;
   -moz-transition: border 0.4s ease;
-}
-
-.addPropertyFormContainer .image-uploading-area li .picture-name.disableInput {
-  opacity: 0.5;
-  pointer-events: none;
 }
 
 .addPropertyFormContainer .image-uploading-area li .picture-name:hover, .addPropertyFormContainer .image-uploading-area li .picture-name:focus {
