add property form

--- a/markup/includes/add-property-form.html
+++ b/markup/includes/add-property-form.html
@@ -432,7 +432,7 @@
         </section>
         <section class="attactment-block" id="attactment-block">
             <strong class="form-heading"><span>attactments</span></strong>
-            <ul class="image-uploading-area error">
+            <ul class="image-uploading-area">
                 <li class="error">
                     <div class="file-uploader">
                         <input type="file" ngf-select ng-model="form.data.files.mainFile.file" onchange="previewAddPropertyImg(this , '.img-thumb1')" class="upload-img">
@@ -441,7 +441,7 @@
                             <span class="propertyDocumentCloseBtn" ng-click="cancelFile(0)"><span class="icon-trash"></span></span>
                         </div>
                     </div>
-                    <input type="text" ng-model="form.data.files.mainFile.title" class="picture-name disableInput" placeholder="Title">
+                    <input type="text" ng-model="form.data.files.mainFile.title" class="picture-name" placeholder="Title">
                     <span class="error-text">This is error</span>
                 </li>
                 <li class="error">
@@ -452,7 +452,7 @@
                             <span class="propertyDocumentCloseBtn" ng-click="cancelFile(1)"><span class="icon-trash"></span></span>
                         </div>
                     </div>
-                    <input type="text" ng-model="form.data.files.twoFile.title" class="picture-name disableInput" placeholder="Title">
+                    <input type="text" ng-model="form.data.files.twoFile.title" class="picture-name" placeholder="Title">
                     <span class="error-text">This is error</span>
                 </li>
                 <li class="error">
@@ -463,7 +463,7 @@
                             <span class="propertyDocumentCloseBtn" ng-click="cancelFile(2)"><span class="icon-trash"></span></span>
                         </div>
                     </div>
-                    <input type="text" ng-model="form.data.files.threeFile.title" class="picture-name disableInput" placeholder="Title">
+                    <input type="text" ng-model="form.data.files.threeFile.title" class="picture-name" placeholder="Title">
                     <span class="error-text">This is error</span>
                 </li>
                 <li class="error">
@@ -474,7 +474,7 @@
                             <span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
                         </div>
                     </div>
-                    <input type="text" ng-model="form.data.files.fourFile.title" class="picture-name disableInput" placeholder="Title">
+                    <input type="text" ng-model="form.data.files.fourFile.title" class="picture-name" placeholder="Title">
                     <span class="error-text">This is error</span>
                 </li>
                 <li class="error">
@@ -485,7 +485,7 @@
                             <span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
                         </div>
                     </div>
-                    <input type="text" ng-model="form.data.files.fiveFile.title" class="picture-name disableInput" placeholder="Title">
+                    <input type="text" ng-model="form.data.files.fiveFile.title" class="picture-name" placeholder="Title">
                     <span class="error-text">This is error</span>
                 </li>
                 <li class="error">
@@ -496,7 +496,7 @@
                             <span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
                         </div>
                     </div>
-                    <input type="text" ng-model="form.data.files.sixFile.title" class="picture-name disableInput" placeholder="Title">
+                    <input type="text" ng-model="form.data.files.sixFile.title" class="picture-name" placeholder="Title">
                     <span class="error-text">This is error</span>
                 </li>
             </ul>
